generates results for submision

--- a/notebook/query_data.ipynb
+++ b/notebook/query_data.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = 'microsoft/phi-2'"
+    "answer_model = 'microsoft/phi-2'"
    ]
   },
   {
@@ -143,14 +143,15 @@
      "output_type": "stream",
      "text": [
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:03<00:00,  1.72s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:03<00:00,  1.68s/it]\n"
      ]
     }
    ],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(model)\n",
-    "model = AutoModelForCausalLM.from_pretrained(model,device_map=\"auto\",)\n",
-    "peft_model = PeftModel.from_pretrained(model, '../bin/pretrained/', device_map=\"auto\")"
+    "tokenizer = AutoTokenizer.from_pretrained(answer_model)\n",
+    "tokenizer.pad_token = tokenizer.eos_token \n",
+    "answer_model = AutoModelForCausalLM.from_pretrained(answer_model,device_map=\"auto\",)\n",
+    "peft_model = PeftModel.from_pretrained(answer_model, '../bin/pretrained/', device_map=\"auto\")"
    ]
   },
   {
@@ -172,7 +173,7 @@
     "    model=peft_model,\n",
     "    tokenizer=tokenizer,\n",
     "    torch_dtype=torch.bfloat16,\n",
-    "    device_map=\"auto\",\n",
+    "    device_map=\"auto\"\n",
     ")"
    ]
   },
@@ -202,7 +203,7 @@
    "source": [
     "retriever = vectorstore.as_retriever(\n",
     "    search_type=\"similarity\",\n",
-    "    search_kwargs={'k': 20}\n",
+    "    search_kwargs={'k': 50}\n",
     ")\n",
     "compressor = CrossEncoderReranker(model=rerank_model, top_n=10)\n",
     "compression_retriever = ContextualCompressionRetriever(\n",
@@ -218,219 +219,152 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Set up question"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from lib.prompt import get_inference_prompt\n",
     "import json\n",
-    "with open('../data/TeleQnA_training.txt') as file:\n",
-    "    questions = json.load(file)"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = questions['question 152']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Get context"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#context from datastore\n",
-    "docs = compression_retriever.invoke(question['question'])\n",
-    "context =  (' '.join(list(map(lambda d:d.page_content,docs)))).replace('\\n', '. ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from lib.prompt import get_inference_prompt\n"
+    "def answer_questions(qst_filename, answer_model, retriever, max_new_tokens=4,return_full_text=False, batch_size = 128):\n",
+    "    with open(qst_filename) as file:\n",
+    "        questions = json.load(file)\n",
+    "    solutions = []\n",
+    "    def get_question_prompt(qstn_id,qstn_data): # in tqdm(questions.items()):\n",
+    "        qstn_id=qstn_id.split(' ')[1].strip()\n",
+    "        qstn_text = qstn_data['question']\n",
+    "        #searching through datastore for context\n",
+    "        docs = retriever.invoke(qstn_text)\n",
+    "        context =  (' '.join(list(map(lambda d:d.page_content,docs)))).replace('\\n', '. ')\n",
+    "        infer_data = get_inference_prompt(qstn_data, context)\n",
+    "        prompt = infer_data['question']\n",
+    "        return qstn_id,prompt\n",
+    "    prompts = list(map(lambda entry:get_question_prompt(entry[0],entry[1]),tqdm(list(questions.items()))))\n",
+    "    num_prompts = len(prompts)\n",
+    "    for i in tqdm(range(0,num_prompts,batch_size)):\n",
+    "        current_prompts=list(map(lambda e:e[1],prompts[i:i+batch_size]))\n",
+    "        current_qstn_ids=list(map(lambda e:e[0],prompts[i:i+batch_size]))\n",
+    "        responses = answer_model(current_prompts,max_new_tokens=max_new_tokens, return_full_text=return_full_text)\n",
+    "        current_ans_ids =list(map(lambda r:r[0]['generated_text'].split(')')[0][-1:].strip(),responses))\n",
+    "        solutions += list(zip(current_qstn_ids,current_ans_ids))\n",
+    "        \n",
+    "    return solutions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prompt = qa_prompt.invoke({'question':question['question'],'context':context}).to_string()\n",
-    "# print(prompt)\n",
-    "# gen_result = answer_generator(prompt,max_new_tokens=256,return_full_text=False)\n",
-    "# refined_context = gen_result[0]['generated_text'].replace('\\n','')\n",
-    "# refined_context"
+    "def save_solution(filename,solution, task=''):\n",
+    "    df = pd.DataFrame(solution,columns=['Question_ID','Answer_ID'])\n",
+    "    df['Task'] = task\n",
+    "    df.to_csv(filename,index=False,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# question['answer']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'question': 'What does the Relaxed monitoring for cell reselection feature in NB-IoT allow the UE to do? [3GPP Release 15]',\n",
-       " 'option 1': 'Avoid monitoring neighbouring cells for 24 hours in stationary or non-changing network topology',\n",
-       " 'option 2': 'Request NPUSCH resources for BSR transmission',\n",
-       " 'option 3': 'Reduce system acquisition time for the UE',\n",
-       " 'option 4': 'Support small cell deployments with lower maximum transmit power',\n",
-       " 'option 5': 'Improve the accuracy of narrowband measurement',\n",
-       " 'answer': 'option 1: Avoid monitoring neighbouring cells for 24 hours in stationary or non-changing network topology',\n",
-       " 'explanation': 'The Relaxed monitoring for cell reselection feature allows the UE to avoid monitoring neighbouring cells for 24 hours in cases where the UE is stationary and/or the network topology is not changing. This helps to extend UE battery life.',\n",
-       " 'category': 'Standards overview'}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "question"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt = get_inference_prompt(question, context)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "refined_prompt = prompt['question']\n",
-    "answer = prompt['answer']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "### Instructions: \n",
-      "Based on only the provided context, select the correct answer from the choices given. Provide your answer in the following format: option Number) Answer. Do not include any additional text or explanation.\n",
-      "\n",
-      "Context:\n",
-      "-\tRelaxed monitoring for cell reselection: When this feature is enabled and the criteria for relaxed monitoring are fulfilled, the UE can reduce its neighbor cell measurements to as seldom as every 24 hours. This can reduce the power consumption In RRC_IDLE, for NB-IoT UEs, when enabled in the cell and the relaxed monitoring criterion is fulfilled, the UE may perform serving cell measurements on the non-anchor paging carrier as specified in TS 36.133 [21]. For NB-IoT, cell reselection identifies the cell that the UE should camp on. It is based on cell reselection criteria which involve measurements of the serving and neighbour cells as follows: -\tCell reselection identifies the cell that the UE should camp on. It is based on cell reselection criteria which involves measurements of the serving and neighbour cells, except for NB-IoT:. . -\tIntra-frequency reselection is based on ranking of cells; not allowed\" after the UE requests access to the NB-IoT, in order to prevent unwanted cell reselection from GERAN, UTRAN, E-UTRAN or NG-RAN to NB-IoT, the UE may: It is optional for UE camped on NTN cell to support triggering of early cell reselection measurements based on the service time broadcasted by the cell as specified in TS 36.304 [14]. This feature is only applicable if the UE supports For NB-IoT UEs, BL UEs or UEs in enhanced coverage, the UE applies the normal cell reselection rules with the following modifications: and NB-IoT. For NB-IoT, the cell broadcasts an indication of support of UE specific DRX for NB-IoT in that cell, and the UE can request UE specific DRX for NB-IoT during Attach and Tracking Area Update procedures irrespective of whether the cell Except for NB-IoT UEs, BL UEs or UEs in enhanced coverage, in RRC_IDLE, the UE applies the normal cell reselection rules with the following modifications: 1>\texcept for NB-IoT, if the idleModeMeasurementReq is included in the UEInformationRequest and the UE has stored VarMeasIdleReport that contains measurement information concerning cells other than the PCell:\n",
-      "\n",
-      "Question:\n",
-      "What does the Relaxed monitoring for cell reselection feature in NB-IoT allow the UE to do? [3GPP Release 15]\n",
-      "\n",
-      "Choices:\n",
-      "option 1) Avoid monitoring neighbouring cells for 24 hours in stationary or non-changing network topology\n",
-      "option 2) Request NPUSCH resources for BSR transmission\n",
-      "option 3) Reduce system acquisition time for the UE\n",
-      "option 4) Support small cell deployments with lower maximum transmit power\n",
-      "option 5) Improve the accuracy of narrowband measurement\n",
-      "\n",
-      "\n",
-      "### Answer:\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(refined_prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+      "100%|██████████| 366/366 [02:08<00:00,  2.84it/s]\n",
+      "100%|██████████| 3/3 [05:45<00:00, 115.12s/it]\n"
      ]
     }
    ],
    "source": [
-    "gen_result = answer_generator(refined_prompt,max_new_tokens=128,return_full_text=False,)"
+    "train_soln = answer_questions('../data/TeleQnA_testing1.txt',answer_generator,compression_retriever)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option 1: Avoid monitoring neighbouring cells for 24 hours in stationary or non-changing network topology\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(answer)"
+    "save_solution('testing_result.csv',train_soln,'Phi-2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv('testing_result.csv')['Answer_ID']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = pd.read_csv('./result.csv')\n",
+    "act = pd.read_csv('../data/Q_A_ID_training.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred['Answer_ID']=pred['Answer_ID'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "option 1) Avoid monitoring neighbouring cells for 24 hours in stationary or non-changing network topology\n",
-      "\n",
-      "### Explanation:\n",
-      "The Relaxed monitoring for cell reselection feature in NB-IoT allows the UE to reduce its neighbour cell measurements to as seldom as every 24 hours. This can reduce the power consumption in RRC_IDLE, for NB-IoT UEs, when enabled in the cell and the relaxed monitoring criterion is fulfilled. This feature is only applicable for NB-IoT UEs, BL UEs or UEs in enhanced coverage.\n",
-      "\n",
-      "### Follow-up Questions:\n",
-      "1.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.6344969199178645"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(gen_result[0]['generated_text'])"
+    "(pred['Answer_ID'] == act['Answer_ID']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#context from datastore\n",
+    "# docs = compression_retriever.invoke(question['question'])\n",
+    "# context =  (' '.join(list(map(lambda d:d.page_content,docs)))).replace('\\n', '. ')\n",
+    "# question\n",
+    "# prompt = get_inference_prompt(question, context)\n",
+    "# refined_prompt = prompt['question']\n",
+    "# answer = prompt['answer']\n",
+    "# print(refined_prompt)\n",
+    "# gen_result = answer_generator(refined_prompt,max_new_tokens=128,return_full_text=False,)\n",
+    "# \"option 1) Avoid monitoring neighbo\"\n",
+    "# print(answer)\n",
+    "# print(gen_result[0]['generated_text'])"
    ]
   }
  ],
@@ -438,7 +372,7 @@
   "kernelspec": {
    "display_name": "yolo",
    "language": "python",
-   "name": "yolo"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
