--- a/notebook/graph.ipynb
+++ b/notebook/graph.ipynb
@@ -275,39 +275,45 @@
       "Based on the provided context, select the correct answer from the choices given. Provide your answer in the following format: option Number: Answer.\n",
       "\n",
       "Context:\n",
-      "The 5G-NR physical-layer model captures those characteristics of the 5G-NR physical-layer that are relevant from the point-of-view of higher layers. More specifically, the physical-layer model captures:. . -\tThe structure of higher-layer data being passed down to or up from the physical layer;. . -\tThe means by which higher layers can configure the physical layer;. . -\tThe different indications (error indications, channel-quality indications, etc.) that are provided by the physical layer to higher layers. –\tPhysCellIdNR. . The IE PhysCellIdNR indicates the physical layer identity (PCI) of an NR cell.. . PhysCellIdNR information element. . -- ASN1START. . . . PhysCellIdNR-r15 ::=\t\t\tINTEGER (0.. 1007). . . . -- ASN1STOP. . . . –\tPhysCellIdRange When 3GPP location field type is set to \"NR CI\", the NR CI field is set to the NR cell identity part of the NR Cell Global Identifier as defined in 3GPP TS 38.413 [14]. NR cell identity has a length 36 bits and is represented by 5 octets by zero-padding the most 4 significant bits of the 5th octet.. . . . When WLAN location field type is set to \"HESSID\", the HESSID field is set to a 6 octet MAC address that identifies the homogeneous ESS (see IEEE Std 802.11 [8]). }. . . . -- ASN1STOP. . . . –\tPhysCellId. . The IE PhysCellId is used to indicate the physical layer identity of the cell, as defined in TS 36.211 [21].. . PhysCellId information element. . -- ASN1START. . . . PhysCellId ::=\t\t\t\t\t\tINTEGER (0..503). . . . -- ASN1STOP. . . . –\tPhysCellIdCDMA2000. . The IE PhysCellIdCDMA2000 identifies the PNOffset that represents the \"Physical cell identity\" in CDMA2000.. . PhysCellIdCDMA2000 information element. . -- ASN1START. . . . PhysCellIdCDMA2000 ::=\t\t\tINTEGER (0..maxPNOffset). . . . -- ASN1STOP y\tthe second digit is incremented for all changes of substance, i.e. technical enhancements, corrections, updates, etc.. . z\tthe third digit is incremented when editorial only changes have been incorporated in the document.. . . 1\tScope. . The present document is a technical specification of the services provided by the physical layer of 5G-NR to upper layers.. . 2\tReferences. . The following documents contain provisions which, through reference in this text, constitute provisions of the present document. -\t5G-AN Protocol Layers: This set of protocols/layers depends on the AN:. . -\tin this Release, the 5G-AN is a 3GPP NR, these protocols/layers are defined in TS 38.401 [16]. The radio protocol between the UE and the 5G-AN node (gNodeB) is specified in TS 38.300 [9].. . . . Figure 8.2-3: User Plane Protocol Stack for MBS session in case of Individual delivery. . -\t5G-AN Protocol Layers: This set of protocols/layers depends on the AN: ul-srs (1) } (SIZE (1..8)),. . \t...,. . \t[[. . \tnr-on-demand-DL-PRS-Request-r17\t\t\t\tNR-On-Demand-DL-PRS-Request-r17\t\t\tOPTIONAL,. . \tnr-DL-PRS-ExpectedAoD-or-AoA-Request-r17\tENUMERATED { eAoD, eAoA }\t\t\t\tOPTIONAL,. . \tpre-configured-AssistanceDataRequest-r17\tENUMERATED { true }\t\t\t\t\t\tOPTIONAL. . \t]]. . }. . . . -- ASN1STOP. . . . NR-Multi-RTT-RequestAssistanceData field descriptions. . nr-PhysCellID. . This field specifies the NR physical cell identity of the current primary cell of the target device.. . nr-AdType\n",
+      "According to the 3GPP specifications, the purpose of the Permanent Equipment Identifier (PEI) is to identify a UE permanently and uniquely in the 5G System. The PEI can be used as an equipment identifier, allowing for the identification of UEs independently of their user identities.. . In other words, the PEI serves as a unique identifier for a device (e.g., a smartphone, tablet, or laptop) that is connected to a cellular network, and it remains associated with that device even if the user changes their phone number or SIM card. The PEI is used in various scenarios, such as authentication, authorization,\n",
       "\n",
       "Question:\n",
-      "What are the physical-layer cell identities for 5G NR? [3GPP Release 17]\n",
+      "What is the purpose of the Permanent Equipment Identifier (PEI)? [3GPP Release 18]\n",
       "Choices:\n",
-      "option 1: There are 256 unique physical-layer cell identities.\n",
-      "option 2: There are 504 unique physical-layer cell identities.\n",
-      "option 3: There are 720 unique physical-layer cell identities.\n",
-      "option 4: There are 1008 unique physical-layer cell identities.\n",
+      "option 1: To support user confidentiality protection\n",
+      "option 2: To enable roaming scenarios\n",
+      "option 3: To address a 3GPP subscription in different data networks\n",
+      "option 4: To uniquely identify the UE within the AMF\n",
+      "option 5: To identify the user equipment accessing the 5G System\n",
       "\n",
       "### Answer:\n"
      ]
     }
    ],
    "source": [
-    "with open('../bin/pickle/inference_testing_prompt.pkl','r+b') as f:\n",
+    "with open('../bin/pickle/inference_training_prompt.pkl','r+b') as f:\n",
     "    prompt = pickle.load(f)\n",
-    "print(prompt[0][1])"
+    "print(prompt[900][1])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../bin/pickle/finetuning_datalist.pkl','r+b') as f:\n",
+    "with open('../bin/pickle/training_finetuning_prompt.pkl','r+b') as f:\n",
     "    prompt = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -315,22 +321,29 @@
      "output_type": "stream",
      "text": [
       "### Instructions: \n",
-      "Based on the provided context, answer the question.\n",
+      "Based on the provided context, select the correct answer from the choices given. Provide your answer in the following format: option Number: Answer.\n",
       "\n",
       "Context:\n",
-      "4.2.2.3.1\tGeneral. . The Nmfaf_3daDataManagement_Deconfigure service operation is used by an NF service consumer to stop mapping data or analytics received by the MFAF to one or more out-bound notification endpoints.. . 4.2.2.3.2\tStop mapping data or analytics . . Figure 4.2.2.3.2-1 shows a scenario where the NF service consumer sends a request to the MFAF to update the configuration to stop mapping data or analytics (as shown in 3GPP TS 23.288 [14])\n",
+      "-\tPRB usage (per cell: UL/DL). . NGAP procedures used for inter-system load balancing are Uplink RAN Configuration Transfer and Downlink RAN Configuration Transfer.. . S1AP procedures used for inter-system load balancing are eNB Configuration Transfer and MME Configuration Transfer.. . 2-step RACH optimization -\tNumber of active UEs;. . -\tRadio Resource Status (per cell PRB usage: UL/DL GBR PRB usage for MIMO, DL/UL non-GBR PRB usage for MIMO, DL/UL total PRB usage for MIMO).. . NGAP procedures used for inter-system load balancing are Uplink RAN Configuration Transfer and Downlink RAN Configuration Transfer. NGAP procedures used for inter-system load balancing are Uplink RAN Configuration Transfer and Downlink RAN Configuration Transfer.. . S1AP procedures used for inter-system load balancing are eNB Configuration Transfer and MME Configuration Transfer.. . 22.4.1.3\tLoad balancing action based on handovers\n",
       "\n",
       "Question:\n",
-      "What is the purpose of the Nmfaf_3daDataManagement_Deconfigure service operation? [3GPP Release 18]\n",
+      "Which NGAP procedure is used for inter-system load balancing? [3GPP Release 17]\n",
+      "Choices:\n",
+      "option 1: eNB Configuration Transfer\n",
+      "option 2: Downlink RAN Configuration Transfer\n",
+      "option 3: Uplink RAN Configuration Transfer\n",
+      "option 4: MME Configuration Transfer\n",
       "\n",
       "### Answer:\n",
-      "The Nmfaf_3daDataManagement_Deconfigure service operation is used to stop mapping data or analytics received by the MFAF to one or more out-bound notification endpoints.\n",
+      "option 3: Uplink RAN Configuration Transfer\n",
+      "### Explanation:\n",
+      "The NGAP procedure used for inter-system load balancing is Uplink RAN Configuration Transfer.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(prompt[0]['prompt'])"
+    "print(prompt[8]['prompt'])"
    ]
   },
   {
