--- a/notebook/graph.ipynb
+++ b/notebook/graph.ipynb
@@ -53,6 +53,7 @@
    "source": [
     "from langchain_experimental.graph_transformers import LLMGraphTransformer\n",
     "from langchain_community.llms.llamafile import Llamafile\n",
+    "\n",
     "from lib.documents import load_documents\n",
     "from langchain_core.documents import Document"
    ]
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m llm_transformer \u001b[38;5;241m=\u001b[39m LLMGraphTransformer(llm\u001b[38;5;241m=\u001b[39mllm)\n\u001b[0;32m----> 2\u001b[0m graph_documents \u001b[38;5;241m=\u001b[39m llm_transformer\u001b[38;5;241m.\u001b[39mconvert_to_graph_documents(documents)\n",
+      "File \u001b[0;32m~/anaconda3/envs/yolo/lib/python3.11/site-packages/langchain_experimental/graph_transformers/llm.py:751\u001b[0m, in \u001b[0;36mLLMGraphTransformer.convert_to_graph_documents\u001b[0;34m(self, documents)\u001b[0m\n\u001b[1;32m    739\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconvert_to_graph_documents\u001b[39m(\n\u001b[1;32m    740\u001b[0m     \u001b[38;5;28mself\u001b[39m, documents: Sequence[Document]\n\u001b[1;32m    741\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[GraphDocument]:\n\u001b[1;32m    742\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Convert a sequence of documents into graph documents.\u001b[39;00m\n\u001b[1;32m    743\u001b[0m \n\u001b[1;32m    744\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    749\u001b[0m \u001b[38;5;124;03m        Sequence[GraphDocument]: The transformed documents as graphs.\u001b[39;00m\n\u001b[1;32m    750\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 751\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess_response(document) \u001b[38;5;28;01mfor\u001b[39;00m document \u001b[38;5;129;01min\u001b[39;00m documents]\n",
+      "File \u001b[0;32m~/anaconda3/envs/yolo/lib/python3.11/site-packages/langchain_experimental/graph_transformers/llm.py:751\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    739\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconvert_to_graph_documents\u001b[39m(\n\u001b[1;32m    740\u001b[0m     \u001b[38;5;28mself\u001b[39m, documents: Sequence[Document]\n\u001b[1;32m    741\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[GraphDocument]:\n\u001b[1;32m    742\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Convert a sequence of documents into graph documents.\u001b[39;00m\n\u001b[1;32m    743\u001b[0m \n\u001b[1;32m    744\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    749\u001b[0m \u001b[38;5;124;03m        Sequence[GraphDocument]: The transformed documents as graphs.\u001b[39;00m\n\u001b[1;32m    750\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 751\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess_response(document) \u001b[38;5;28;01mfor\u001b[39;00m document \u001b[38;5;129;01min\u001b[39;00m documents]\n",
+      "File \u001b[0;32m~/anaconda3/envs/yolo/lib/python3.11/site-packages/langchain_experimental/graph_transformers/llm.py:703\u001b[0m, in \u001b[0;36mLLMGraphTransformer.process_response\u001b[0;34m(self, document)\u001b[0m\n\u001b[1;32m    700\u001b[0m parsed_json \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mjson_repair\u001b[38;5;241m.\u001b[39mloads(raw_schema)\n\u001b[1;32m    701\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m rel \u001b[38;5;129;01min\u001b[39;00m parsed_json:\n\u001b[1;32m    702\u001b[0m     \u001b[38;5;66;03m# Nodes need to be deduplicated using a set\u001b[39;00m\n\u001b[0;32m--> 703\u001b[0m     nodes_set\u001b[38;5;241m.\u001b[39madd((rel[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhead\u001b[39m\u001b[38;5;124m\"\u001b[39m], rel[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhead_type\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[1;32m    704\u001b[0m     nodes_set\u001b[38;5;241m.\u001b[39madd((rel[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtail\u001b[39m\u001b[38;5;124m\"\u001b[39m], rel[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtail_type\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[1;32m    706\u001b[0m     source_node \u001b[38;5;241m=\u001b[39m Node(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39mrel[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhead\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;28mtype\u001b[39m\u001b[38;5;241m=\u001b[39mrel[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhead_type\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'head'"
+     ]
+    }
+   ],
    "source": [
     "llm_transformer = LLMGraphTransformer(llm=llm)\n",
     "graph_documents = llm_transformer.convert_to_graph_documents(documents)"
@@ -111,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +136,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,16 +291,16 @@
       "Based on the provided context, select the correct answer from the choices given. Provide your answer in the following format: option Number: Answer.\n",
       "\n",
       "Context:\n",
-      "According to the 3GPP specifications, the purpose of the Permanent Equipment Identifier (PEI) is to identify a UE permanently and uniquely in the 5G System. The PEI can be used as an equipment identifier, allowing for the identification of UEs independently of their user identities.. . In other words, the PEI serves as a unique identifier for a device (e.g., a smartphone, tablet, or laptop) that is connected to a cellular network, and it remains associated with that device even if the user changes their phone number or SIM card. The PEI is used in various scenarios, such as authentication, authorization,\n",
+      "According to the provided context, when a UE supports slice-aware cell reselection and the NAS provides NSAG information and their priorities for consideration during cell reselection, the UE provides this information to the AS.<|eot_id|>\n",
       "\n",
       "Question:\n",
-      "What is the purpose of the Permanent Equipment Identifier (PEI)? [3GPP Release 18]\n",
+      "What does the UE provide to the AS for slice aware cell reselection? [3GPP Release 17]\n",
       "Choices:\n",
-      "option 1: To support user confidentiality protection\n",
-      "option 2: To enable roaming scenarios\n",
-      "option 3: To address a 3GPP subscription in different data networks\n",
-      "option 4: To uniquely identify the UE within the AMF\n",
-      "option 5: To identify the user equipment accessing the 5G System\n",
+      "option 1: Slice-Maximum Bit Rate\n",
+      "option 2: S-NSSAI\n",
+      "option 3: NSSRG\n",
+      "option 4: S-MBR\n",
+      "option 5: NSAG information\n",
       "\n",
       "### Answer:\n"
      ]
@@ -293,7 +309,7 @@
    "source": [
     "with open('../bin/pickle/inference_training_prompt.pkl','r+b') as f:\n",
     "    prompt = pickle.load(f)\n",
-    "print(prompt[900][1])"
+    "print(prompt[-4][1])"
    ]
   },
   {
